config now saving to backup dir

--- a/frontend/src/component/user-view/user-view.scss
+++ b/frontend/src/component/user-view/user-view.scss
@@ -1,6 +1,10 @@
 @use '../../scss/common';
 @use '../../scss/preferences';
 
+.tag-select {
+  min-width: 160px;
+}
+
 .user {
   @include preferences.prefsRoot();
   @include preferences.prefsToolbar();
