worked on main config ui, except headers (missing map input component), evrything seems to work.

--- a/frontend/src/component/form-view/form-view.scss
+++ b/frontend/src/component/form-view/form-view.scss
@@ -25,12 +25,14 @@
 
     &-label {
       text-align: right;
-      width: 6em;
+      width: 7em;
       justify-content: flex-end;
+      align-items: center;
     }
 
     &-value {
       flex: 1 0 auto;
+      align-items: center;
     }
 
     label {
