WebUI: added gallery view as second view for playlist

--- a/frontend/src/component/input-field/input-field.scss
+++ b/frontend/src/component/input-field/input-field.scss
@@ -49,5 +49,8 @@
       border-bottom-right-radius: var(--border-radius);
       border-top-right-radius: var(--border-radius);
     }
+    &:active {
+      transform: scale(0.95);
+    }
   }
 }
