--- a/frontend/src/scss/_theme.scss
+++ b/frontend/src/scss/_theme.scss
@@ -56,8 +56,8 @@
   --text-button-hover-color: #50FA7B;
 
 
-  --scrollbar-color: #44475A #ffffff;
-  --scrollbar-thumb-background-color: #44475A;
+  --scrollbar-track-color: #838383;
+  --scrollbar-handle-color: #505050;
 
   --tabset-background-color: #282A36;
   --tabset-border-color: #000;
@@ -77,4 +77,6 @@
 
   --option-active-background-color: #50FA7B;
   --option-active-color: #000;
+
+  --shocase-card-background: #4b4b4b;
 }
