--- a/frontend/src/scss/_default.scss
+++ b/frontend/src/scss/_default.scss
@@ -1,28 +1,23 @@
 @use './common';
 
-.app {
-  /* ===== Scrollbar CSS ===== */
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: var(--scrollbar-color);
-  }
 
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 12px;
-  }
-
-  *::-webkit-scrollbar-track {
-    background: var(--background-color);
-  }
-
-  *::-webkit-scrollbar-thumb {
-    background-color: var(--scrollbar-thumb-background-color);
-    border-radius: 0;
-    border: none;
-  }
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: var(--scrollbar-track-color);
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  //-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: var(--scrollbar-handle-color);
+}
+
 
 button {
   cursor: pointer;
@@ -70,4 +65,30 @@ input {
 
 select {
   padding: 2px 4px;
+}
+
+.tool-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.1rem;
+  width: 1.1rem;
+  border-radius: var(--border-radius);
+  background-color: var(--tool-button-background-color);
+  color: var(--tool-button-color);
+  cursor: pointer;
+
+  svg {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  &:hover {
+    color: var(--tool-button-hover-color);
+    background-color: var(--tool-button-hover-background-color);
+  }
+
+  &:active {
+    transform: scale(0.9);
+  }
 }
