fixed some web ui style problems

--- a/frontend/src/component/checkbox/checkbox.scss
+++ b/frontend/src/component/checkbox/checkbox.scss
@@ -10,7 +10,7 @@ $checkbox-size:18px;
   user-select: none;
 
   input {
-    position: absolute;
+    position: relative;
     opacity: 0;
     cursor: pointer;
     height: 0;
