--- a/frontend/src/component/tag-input/tag-input.scss
+++ b/frontend/src/component/tag-input/tag-input.scss
@@ -7,4 +7,6 @@
   --rti-tag-remove: var(--text-color) !important;
   --rti-tag-remove-hover: var(--tab-active-color) !important;
   max-width: 660px;
+  padding: 0;
 }
+
