--- a/frontend/src/component/user-view/user-view.scss
+++ b/frontend/src/component/user-view/user-view.scss
@@ -111,7 +111,7 @@
         & {
           display: table-cell;
           width: auto;
-          vertical-align: bottom;
+          vertical-align: middle;
           padding-left: 4px;
           padding-right: 4px;
         }
