--- a/frontend/src/component/user-view/user-view.scss
+++ b/frontend/src/component/user-view/user-view.scss
@@ -120,6 +120,10 @@
           height: 2rem;
         }
 
+        &-number {
+          max-width: 50px;
+        }
+
         &-toolbar {
           & {
             display: flex;
