--- a/frontend/src/component/form-view/form-view.scss
+++ b/frontend/src/component/form-view/form-view.scss
@@ -34,7 +34,7 @@
       text-align: right;
       width: 7em;
       justify-content: flex-end;
-      align-items: center;
+      align-items: flex-start;
     }
 
     &-value {
