added datepicker for expiration date, i dont like the component

--- a/frontend/src/component/tab-set/tab-set.scss
+++ b/frontend/src/component/tab-set/tab-set.scss
@@ -18,7 +18,7 @@
     color: var(--tab-color);
     padding: 4px 8px;
     border-top-left-radius: var(--border-radius);
-    border-top-right-radius: var(--border-radius);
+    //border-top-right-radius: var(--border-radius);
 
     &:active {
       transform: scale(0.9);
