--- a/frontend/src/scss/_default.scss
+++ b/frontend/src/scss/_default.scss
@@ -43,7 +43,7 @@ button {
   filter: drop-shadow(3px 3px 4px var(--popup-shadow-color));
   min-width: 200px;
 
-  border-top-left-radius:var(--border-radius);
+  border-radius:var(--border-radius);
 
 }
 
