--- a/frontend/src/component/preferences/preferences.scss
+++ b/frontend/src/component/preferences/preferences.scss
@@ -25,6 +25,7 @@
     display: flex;
     flex-flow: column;
     flex: 1 1 auto;
+    overflow: hidden;
     .panel {
       flex: 1 1 auto;
       .card {
@@ -50,13 +51,13 @@
 
     button {
       @include common.iconButton();
-      border: 2px solid transparent;
+      border: 1px solid transparent;
     }
 
     button.selected {
       color: var(--icon-button-hover-color);
       background-color: var(--icon-button-hover-background-color);
-      border: 2px solid var(--icon-button-hover-color);
+      border: 1px solid var(--icon-button-hover-border-color);
     }
   }
 
