--- a/frontend/src/component/api-proxy-view/api-proxy-view.scss
+++ b/frontend/src/component/api-proxy-view/api-proxy-view.scss
@@ -15,8 +15,9 @@
     overflow: auto;
     &-area {
       display: flex;
-      flex-flow: column;
-      gap: 8px;
+      flex-flow: row wrap;
+      gap: 12px;
+      padding: 12px;
     }
   }
 
