--- a/frontend/src/component/login/login.scss
+++ b/frontend/src/component/login/login.scss
@@ -1,4 +1,5 @@
 @use '../../scss/theme';
+@use '../../scss/common';
 
 .login-view {
   display: flex;
@@ -13,6 +14,7 @@
   &__title {
     background-color: var(--app-header-color);
     padding: 8px;
+    font-size: 1.5rem;
   }
 
   &__form {
@@ -25,24 +27,19 @@
     input {
       height: 2rem;
       border: none;
+      border-radius: 6px;
       font-size: 1.4rem;
       background-color: var(--card-background-color);
       padding: 4px 8px;
     }
 
     button {
-      height: 2rem;
-      border: none;
-      font-size: 1.4rem;
-      background-color: var(--text-button-background-color);
-      color: var(--text-button-color);
-      padding: 4px 8px;
-      border-radius: 6px;
+      @include common.textButton();
     }
 
     .error-text {
-      color: red;
-      font-size: 0.8rem;
+      color: var(--attention-color);
+      font-size: 1rem;
     }
   }
 }
