--- a/frontend/src/scss/_common.scss
+++ b/frontend/src/scss/_common.scss
@@ -1,5 +1,42 @@
 $media-size-mobile: 600px;
 
+@mixin container_common($justify-content: flex-start, $padding: 12px) {
+  display: flex;
+  justify-content: $justify-content;
+  gap: 8px;
+  box-sizing: border-box;
+  padding: $padding;
+}
+
+@mixin container_vert() {
+  flex-flow: column;
+  @include container_common();
+}
+
+@mixin container_horz() {
+  flex-flow: row;
+  @include container_common();
+}
+
+@mixin container_horz_nowrap($justify-content: flex-start) {
+  flex-flow: row nowrap;
+  @media (max-width: $media-size-mobile) {
+    flex-flow: column;
+  }
+  @include container_common($justify-content);
+}
+
+@mixin container_horz_no_padding() {
+  flex-flow: row;
+  @include container_common($padding: 0);
+}
+
+@mixin container_vert_no_padding($justify-content: flex-start) {
+  flex-flow: column;
+  @include container_common($justify-content, $padding: 0);
+}
+
+
 @mixin iconButton {
   display: flex;
   justify-content: center;
