--- a/frontend/src/component/main-config-view/main-config-view.scss
+++ b/frontend/src/component/main-config-view/main-config-view.scss
@@ -14,17 +14,14 @@
   @include preferences.prefsForm();
 
   &__content-form {
-    display: flex;
-    flex-flow: column;
-    gap: 12px;
+    @include common.container_vert_no_padding();
   }
 
   &__content {
-
-    display: flex;
-    flex-flow: column;
-    gap: 4px;
+    @include common.container_vert_no_padding(flex-start);
     align-items: stretch;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     &-form {
       &__section-title {
@@ -33,6 +30,14 @@
         border-bottom: 1px solid var(--border-color);
         padding-bottom: 4px;
         margin: 8px 0;
+      }
+      .form-view__col-label {
+        width: 120px;
+        min-width: 120px;
+        max-width: 120px;
+        @media (max-width: common.$media-size-mobile) {
+          justify-content: flex-start;
+        }
       }
     }
 
@@ -51,11 +56,8 @@
   }
 
   &__restart {
-    display: flex;
-    flex-flow: row;
-    gap: 4px;
+    @include common.container_horz_no_padding();
     align-items: center;
-    justify-content: center;
     color: var(--label-color);
 
     &-warn-icon {
