--- a/frontend/src/component/map-editor/map-editor.scss
+++ b/frontend/src/component/map-editor/map-editor.scss
@@ -1,28 +1,29 @@
 @use '../../scss/common';
 
 .map-editor {
-  display: flex;
-  flex-flow: column;
-  gap: 8px;
+  @include common.container_vert();
+  flex: 1 1 auto;
+  overflow: hidden;
+  border: 1px solid var(--border-color);
+  border-radius: 8px;
 
   &__toolbar {
     flex: 0 0 auto;
-    width: 4em;
     span {
       @include common.iconButton();
     }
   }
 
   &__table {
-    display: flex;
-    flex-flow: column;
-    gap: 4px;
+    @include common.container_vert_no_padding();
   }
 
   &__row {
     display: flex;
     flex-flow: row nowrap;
     gap: 20px;
+    flex: 1 1 auto;
+
   }
 
   &__col  {
@@ -37,6 +38,13 @@
     border: 1px solid var(--border-color);
     padding: 0 4px;
     height: 2rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  &__col-value {
+    flex: 1 1 auto;
   }
 
   &__input {
@@ -53,10 +61,6 @@
       input {
         padding: 4px 0;
       }
-    }
-
-    &-toolbar {
-      width: 4em;
     }
 
     button {
