--- a/frontend/src/component/preferences/preferences.scss
+++ b/frontend/src/component/preferences/preferences.scss
@@ -1,35 +1,29 @@
 @use '../../scss/common';
 
 .preferences {
-  display: flex;
-  flex-flow: row;
-  padding: 12px;
+  @include common.container_horz();
   overflow: hidden;
-  justify-content: center;
-  gap: 18px;
   flex: 1 1 auto;
 
   &__content {
-    display: flex;
-    flex-flow: row nowrap;
-    @media (max-width: common.$media-size-mobile) {
-      flex-flow: column;
-    }
-
-    justify-content: flex-start;
-    gap: 12px;
+    @include common.container_horz_nowrap(flex-start);
     flex: 1 1 auto;
+    overflow: hidden;
   }
 
   &__panels {
-    display: flex;
-    flex-flow: column;
-    flex: 1 1 auto;
+    @include common.container_vert_no_padding(flex-start);
     overflow: hidden;
+    flex: 1 1 auto;
+
     .panel {
+      @include common.container_vert();
       flex: 1 1 auto;
+      overflow: hidden;
       .card {
+        @include common.container_vert();
         flex: 1 1 auto;
+        overflow: hidden;
       }
     }
   }
@@ -37,6 +31,7 @@
   &__sidebar {
     display: flex;
     flex-flow: column;
+    box-sizing: border-box;
     @media (max-width: common.$media-size-mobile) {
       flex-flow: row;
     }
