--- a/frontend/src/component/svg-icon/svg-icon.scss
+++ b/frontend/src/component/svg-icon/svg-icon.scss
@@ -1,7 +1,7 @@
 .svg-icon {
     fill: currentColor;
     width: 1em;
-    height: 1em;
+    aspect-ratio: 1 / 1;
     display: inline-block;
     font-size: 1.5rem;
     transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
