--- a/frontend/src/scss/_default.scss
+++ b/frontend/src/scss/_default.scss
@@ -1,6 +1,5 @@
 @use './common';
 
-
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
@@ -92,4 +91,8 @@ select {
   &:active {
     transform: scale(0.9);
   }
+}
+
+:not(input[type="text"]) {
+  caret-color: transparent;
 }
