--- a/frontend/src/component/user-playlist/user-playlist.scss
+++ b/frontend/src/component/user-playlist/user-playlist.scss
@@ -7,20 +7,79 @@
 
   @include preferences.prefsToolbar();
 
-
   &__header {
     font-size: 2rem;
     color: var(--label-color);
   }
+  &__categories-panel {
+    @include common.container_vert_no_padding();
+    overflow: hidden;
+    gap: 8px;
+  }
+  &__categories-toolbar {
+    @include common.container_horz_no_padding();
+    border: 1px solid red;
+  }
 
   &__categories {
-    @include common.container_vert();
-    overflow: auto;
+    display: grid;
+    grid-gap: 10px; /* Abstand zwischen den Elementen */
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    overflow-x: hidden;
+    overflow-y: auto;
     gap: 8px;
+    padding: 4px;
+
+    &__toolbar {
+      display: flex;
+      flex-flow: row nowrap;
+      gap: 4px;
+      flex: 0 0 auto;
+      padding: 4px;
+      background-color: var(--background-color);
+      align-items: center;
+
+      &-filter {
+        flex-grow: 1;
+        .playlist-filter {
+            max-width: 400px;
+          input {
+              font-size: 1em;
+          }
+        }
+      }
+
+      button {
+        @include common.iconButton();
+        height: 48px;
+      }
+
+      .button-active {
+        box-sizing: border-box !important;
+        transform: scale(0.9);
+        background-color: var(--option-active-background-color) !important;
+        svg {
+        color: var(--option-active-color) !important;
+        }
+      }
+    }
+
     &__category {
+      border:1px solid var(--border-color);
+      padding: 12px 8px;
+      border-radius: var(--border-radius);
+      background-color: var(--card-background-color);
+      box-sizing: border-box;
       display: flex;
       flex-flow: row nowrap;
       gap: 8px;
+      white-space: nowrap;
+
+      .checkbox-container {
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
 
       .checkbox-container:hover {
         cursor: pointer;
