--- a/frontend/src/app-user/app-user.scss
+++ b/frontend/src/app-user/app-user.scss
@@ -16,13 +16,16 @@
     font-size: 2rem;
     font-weight: bold;
     color: var(--app-header-color);
-    text-align:center;
-    padding: 10px 68px;
+    align-content: center;
+    padding: 10px;
     @media (max-width: common.$media-size-mobile) {
       padding: 10px 0;
     }
 
     &__logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       svg, img {
         width: 2em;
         aspect-ratio: 1 / 1;
@@ -31,7 +34,7 @@
     }
 
     &__caption {
-      height: 1em;
+      display: flex;
       flex-flow: row nowrap;
       flex: 1 1 auto;
       justify-content: center;
@@ -39,6 +42,8 @@
     }
 
     &__toolbar {
+      display: flex;
+      align-items: center;
       flex: 0 0 auto;
       button {
         @include common.iconButton();
