--- a/frontend/src/component/main-config-view/main-config-view.scss
+++ b/frontend/src/component/main-config-view/main-config-view.scss
@@ -57,6 +57,10 @@
 
   &__restart {
     @include common.container_horz_no_padding();
+    border-top: 1px solid var(--border-color);
+    padding-top: 12px;
+    margin-top: 12px;
+    justify-content: center;
     align-items: center;
     color: var(--label-color);
 
