--- a/frontend/src/scss/_default.scss
+++ b/frontend/src/scss/_default.scss
@@ -99,3 +99,19 @@ select {
 input[type="text"] {
   caret-color: auto;
 }
+
+select {
+  height: 2rem;
+  border-radius: var(--border-radius);
+  font-size: 1.2rem;
+  padding: 0 8px;
+  cursor: pointer;
+  &:hover {
+    color: var(--text-button-hover-color);
+    background-color: var(--text-button-hover-background-color);
+  }
+}
+
+option {
+  cursor: pointer;
+}
